--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
   firebase.analytics();
   const db = firebase.firestore();
 </script>
-    <script src="scripts/chat.js"></script>
-    <script src="scripts/ui.js"></script>
-    <script src="scripts/app.js"></script>
+    <script src="https://github.com/archmvv/archmvv.github.io/scripts/chat.js"></script>
+    <script src="https://github.com/archmvv/archmvv.github.io/scripts/ui.js"></script>
+    <script src="https://github.com/archmvv/archmvv.github.io/scripts/app.js"></script>
 
 </body>
 </html>
